--- a/RTBWIT/styles.css
+++ b/RTBWIT/styles.css
@@ -3,3 +3,8 @@
     font-size: 2em;
     font-weight:bolder;
 }
+.firstParagraph {
+    color:#e22bab;
+    font-size: 1.5em;
+    font-weight:bolder;
+}
