--- a/RTBWIT/styles.css
+++ b/RTBWIT/styles.css
@@ -5,6 +5,10 @@
 }
 .firstParagraph {
     color:#e22bab;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight:bolder;
+}
+.pic {
+    width: 300px;
+    height: 200px;
 }
